<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgContact"
        android:layout_width="312dp"
        android:layout_height="193dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="52dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnAddImage"
        android:layout_width="44dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="56dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:text="@string/btnAdd"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/imgContact"
        tools:layout_editor_absoluteX="1dp" />

    <Spinner
        android:id="@+id/cboCountries"
        android:layout_width="360dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/countries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgContact" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="66dp"
        android:layout_height="23dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/textCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/textName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cboCountries" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/placeholderName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cboCountries" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/textTel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="359dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:digits="0123456789"
        android:ems="8"
        android:hint="@string/placeholderTel"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/textNota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <EditText
        android:id="@+id/txtNote"
        android:layout_width="358dp"
        android:layout_height="105dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/placeholderNota"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <Button
        android:id="@+id/btnSaveContact"
        android:layout_width="354dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnBtnSave"
        android:textSize="30px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNote" />

    <Button
        android:id="@+id/btnNextView"
        android:layout_width="354dp"
        android:layout_height="37dp"
        android:text="@string/btnNextView"
        android:textSize="30px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveContact" />

</androidx.constraintlayout.widget.ConstraintLayout>