<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85CFEAEA"
    android:orientation="vertical"
    tools:context=".ActivityList">

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_drawable"
        android:backgroundTint="@color/white"
        android:drawableStart="@color/white"
        android:text="Atras"
        android:textColorLink="#90BBCF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listaContacto"
        android:layout_width="367dp"
        android:layout_height="414dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/material_dynamic_neutral90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscar"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_drawable"
        android:text="Eliminar Contacto"
        android:textColorLink="#C8E0E8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompartir"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_drawable"
        android:hint="@string/btnActualizar"
        android:text="Actualizar Contacto"
        android:textColorLink="#C8E0E8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnEliminar"
        app:layout_constraintTop_toBottomOf="@+id/btnVer"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:hint="@string/btnCompartir"
        android:text="Compartir Contacto"
        android:textColorLink="#C8E0E8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaContacto"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/material_dynamic_neutral70"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/btnVer"
        android:text="Ver Imagen"
        android:textColorLink="#C8E0E8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnCompartir"
        app:layout_constraintTop_toBottomOf="@+id/listaContacto"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/buscar"
        android:layout_width="372dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/baseline_search_24"
        android:ems="10"
        android:hint="@string/buscar"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtras"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>